[package]
name = "gc9a01a"
version = "0.1.0"
authors = ["Jonas Spanoghe <jonas@spanoghe.net>"]
edition = "2021"
description = "TODO"
license = "MIT  OR Apache-2.0"
keywords = []
categories = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = { version = "0.2.7", features = ["unproven"] }
