[package]
name = "gc9a01a"
version = "0.1.0"
authors = ["Jonas Spanoghe <jonas@spanoghe.net>"]
edition = "2021"
description = "SPI driver for the GC9A01A LCD display controller"
license = "MIT OR Apache-2.0"
repository = "https://gitlab.com/jspngh/gc9a01a-rs"
keywords = ["no-std", "embedded", "embedded-graphics", "gc9a01a", "display"]
categories = ["embedded", "hardware-support", "no-std"]

[dependencies]
embedded-hal = { version = "0.2.7", features = ["unproven"] }
embedded-graphics-core = "0.3.3"
display-interface = "0.4.1"
display-interface-spi = "0.4.1"

[dev-dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
cortex-m-rtic = "1.1.3"
panic-halt = "0.2"
tinybmp = "0.4"
embedded-graphics = "0.7.1"
rp-pico = "0.5"
fugit = "0.3"

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
opt-level = 3

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false
