[package]
name = "gc9a01a"
version = "0.1.1"
authors = ["Jonas Spanoghe <jonas@spanoghe.net>"]
edition = "2021"
description = "SPI driver for the GC9A01A LCD display controller"
license = "MIT OR Apache-2.0"
repository = "https://gitlab.com/jspngh/gc9a01a-rs"
keywords = ["no-std", "embedded", "embedded-graphics", "gc9a01a", "display"]
categories = ["embedded", "hardware-support", "no-std"]

[dependencies]
embedded-hal = { version = "0.2.7", features = ["unproven"] }
embedded-graphics-core = "0.4.0"
display-interface = "0.4.1"
display-interface-spi = "0.4.1"

[dev-dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
panic-halt = "0.2"
tinybmp = "0.5"
embedded-graphics = "0.8.0"
rp-pico = "0.7"
fugit = "0.3"

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
opt-level = 3

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false
